--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ crossorigin="anonymous">
             <div class="col-md-12 hidden-xs">
                 <div class="banner"> <span>Category Banner</span></div>
             </div>
-            <div class="col-xs-12 xs-menu">
+            <div class="col-xs-12 xs-menu visible-xs">
                 <span class="glyphicon glyphicon-align-justify"></span>
             </div>
         </div>
@@ -141,7 +141,7 @@ crossorigin="anonymous">
                         <span class="caption-img hidden-xs">
                             Vestibulum tincidunt tellus a metus hendrer
                         </span>
-                        <span class="product-name">Product Name</span>
+                        <span class="product-name visible-xs">Product Name</span>
                         <span class="price">
                             $ 199.29
                         </span>
@@ -157,7 +157,7 @@ crossorigin="anonymous">
                         <span class="caption-img hidden-xs">
                             Vestibulum tincidunt tellus a metus hendrer
                         </span>
-                        <span class="product-name">Product Name</span>
+                        <span class="product-name visible-xs">Product Name</span>
                         <span class="price">
                             $ 199.29
                         </span>
@@ -173,7 +173,7 @@ crossorigin="anonymous">
                         <span class="caption-img hidden-xs">
                             Vestibulum tincidunt tellus a metus hendrer
                         </span>
-                        <span class="product-name">Product Name</span>
+                        <span class="product-name visible-xs">Product Name</span>
                         <span class="price">
                             $ 199.29
                         </span>
@@ -189,7 +189,7 @@ crossorigin="anonymous">
                         <span class="caption-img hidden-xs">
                             Vestibulum tincidunt tellus a metus hendrer
                         </span>
-                        <span class="product-name">Product Name</span>
+                        <span class="product-name visible-xs">Product Name</span>
                         <span class="price">
                             $ 199.29
                         </span>
@@ -205,7 +205,7 @@ crossorigin="anonymous">
                         <span class="caption-img hidden-xs">
                             Vestibulum tincidunt tellus a metus hendrer
                         </span>
-                        <span class="product-name">Product Name</span>
+                        <span class="product-name visible-xs">Product Name</span>
                         <span class="price">
                             $ 199.29
                         </span>
@@ -221,7 +221,7 @@ crossorigin="anonymous">
                         <span class="caption-img hidden-xs">
                             Vestibulum tincidunt tellus a metus hendrer
                         </span>
-                        <span class="product-name">Product Name</span>
+                        <span class="product-name visible-xs">Product Name</span>
                         <span class="price">
                             $ 199.29
                         </span>
@@ -237,7 +237,7 @@ crossorigin="anonymous">
                         <span class="caption-img hidden-xs">
                             Vestibulum tincidunt tellus a metus hendrer
                         </span>
-                        <span class="product-name">Product Name</span>
+                        <span class="product-name visible-xs">Product Name</span>
                         <span class="price">
                             $ 199.29
                         </span>
@@ -253,7 +253,7 @@ crossorigin="anonymous">
                         <span class="caption-img hidden-xs">
                             Vestibulum tincidunt tellus a metus hendrer
                         </span>
-                        <span class="product-name">Product Name</span>
+                        <span class="product-name visible-xs">Product Name</span>
                         <span class="price">
                             $ 199.29
                         </span>
@@ -269,7 +269,7 @@ crossorigin="anonymous">
                         <span class="caption-img hidden-xs">
                             Vestibulum tincidunt tellus a metus hendrer
                         </span>
-                        <span class="product-name">Product Name</span>
+                        <span class="product-name visible-xs">Product Name</span>
                         <span class="price">
                             $ 199.29
                         </span>
